--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,9 @@
 .container {
   margin-bottom: 10rem;
 }
+
+.main-image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
