draft projects component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,6 +75,8 @@
   </div>
 </div>
 
+<app-footer></app-footer>
+
 <ng-template #actionButtons>
   <div class="flex justify-content-start gap-2">
     <p-button
