--- a/src/app/small-footer/small-footer.component.html
+++ b/src/app/small-footer/small-footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-content-between">
+<div class="flex justify-content-between mx-5">
   <div class="flex text-xs gap-3">
     <div>© 2023 PROJECT_NAME. All rights reserved.</div>
     <div class="underline">Privacy Policy</div>
