small ui refactoring

--- a/src/app/projects/project-card/project-card.component.html
+++ b/src/app/projects/project-card/project-card.component.html
@@ -13,7 +13,11 @@
   <div class="project-description">{{ project.description }}</div>
 
   <div class="flex justify-content-between gap-2">
-    <p-button label="View More" icon="pi pi-eye"></p-button>
+    <p-button
+      label="View More"
+      icon="pi pi-eye"
+      (onClick)="viewProjectDetails(project.id)"
+    ></p-button>
     <p-button
       label="Vacancies"
       icon="pi pi-users"
