--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-navbar />
-<router-outlet />
-<app-small-footer />
+<div class="page-container">
+  <app-navbar></app-navbar>
+  <div class="content-wrap">
+    <router-outlet></router-outlet>
+  </div>
+  <app-small-footer></app-small-footer>
+</div>
