create project dialog

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,3 +33,8 @@
     </div>
   </ng-template>
 </p-menubar>
+
+<app-create-project-dialog
+  [isShown]="isShownCreateProjectDialog"
+  (close)="isShownCreateProjectDialog = false"
+></app-create-project-dialog>
