add vacancy components

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
     <img
-      src="/assets/codu-team-icon.png"
+      src="/src/assets/codu-team-icon.png"
       height="60"
       routerLink=""
       class="mr-2"
+      alt="Coud team icon"
     />
   </ng-template>
   <ng-template pTemplate="end">
