--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import "primeflex/primeflex";
+@import "../../../../../node_modules/primeflex/primeflex";
 
 $p-menubar-padding-lg: 10rem;
 $p-menubar-padding-md: 5rem;
