refactor code structure

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
     <img
-      src="/src/assets/codu-team-icon.png"
+      src="../assets/codu-team-icon.png"
       height="60"
       routerLink=""
       class="mr-2"
