--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="p-10 mb-7 flex justify-content-center">
-    <img class="main-image" src="/assets/codu_team_backgound.png" />
+    <img class="main-image" src="../assets/codu_team_backgound.png" alt="Main page" />
   </div>
 
   <div class="flex flex-column justify-content-start">
@@ -70,7 +70,7 @@
     </div>
 
     <div class="col">
-      <img class="block w-full h-full" src="/assets/grow_skills.png" />
+      <img class="block w-full h-full" src="../assets/grow_skills.png" />
     </div>
   </div>
 </div>
