--- a/src/app/features/user/auth/auth.component.html
+++ b/src/app/features/user/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div class="auth-container grid">
   <div class="col">
-    <img class="block w-full" src="/assets/auth.png" />
+    <img class="block w-full" src="/src/assets/auth.png" />
   </div>
 
   <div class="col">
