--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -37,5 +37,5 @@
 
 <app-create-project-dialog
   [isShown]="isShownCreateProjectDialog"
-  (close)="isShownCreateProjectDialog = false"
+  (closedDialog)="isShownCreateProjectDialog = false"
 ></app-create-project-dialog>
