--- a/src/app/features/projects/components/project-card/project-card.component.html
+++ b/src/app/features/projects/components/project-card/project-card.component.html
@@ -4,7 +4,7 @@
     [category]="project.category"
   ></app-project-category>
 
-  <img class="w-full" [src]="getImageUrl()" />
+  <img class="w-full" [src]="getImageUrl()" alt="Something" />
 
   <div class="text-xl my-3 font-bold">
     {{ project.title }}
