--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,3 +1,7 @@
+<div class="flex w-full justify-content-center">
+  <app-projects-filter />
+</div>
+
 <ng-container *ngIf="projects && projects.length > 0">
   <div class="flex gap-5 flex-wrap justify-content-center py-5">
     <app-project-card
