--- a/src/app/features/projects/components/project-card/project-card.component.html
+++ b/src/app/features/projects/components/project-card/project-card.component.html
@@ -19,7 +19,7 @@
       (onClick)="viewProjectDetails(project.id)"
     ></p-button>
     <p-button
-      label="Vacancies"
+      label="Positions"
       icon="pi pi-users"
       styleClass="p-button-secondary"
     ></p-button>
