--- a/src/app/features/positions/components/position-line/position-line.component.html
+++ b/src/app/features/positions/components/position-line/position-line.component.html
@@ -1,13 +1,17 @@
-<div>
+<div class="mt-3 p-2 border-round-md border-1 border-primary shadow-5">
   <div>
-    <span>{{ position.tittle }}</span>
-    <span>at</span>
-    <span>{{ position.projectName }}</span>
-    <span>{{ position.city }}</span>
+    <span class="underline cursor-pointer">{{ position.tittle }}</span>
+    <span> at </span>
+    <span class="font-italic mr-2">{{ position.projectName }}</span>
+
+    <span class="text-sm text-color-secondary">
+      <span class="pi pi-map-marker"></span>
+      <span>{{ position.city }}</span>
+    </span>
   </div>
 
-  <div>
-    <div>{{ position.shortDescription }}</div>
+  <div class="flex justify-content-between mt-1">
+    <div class="text-sm">{{ position.shortDescription }}</div>
     <p-button label="Apply"></p-button>
   </div>
 </div>
