--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -1,5 +1,6 @@
 <div class="flex gap-3 pt-5" *ngIf="currentUser$ | async as user">
   <div class="flex flex-column gap-3">
+    <!-- TODO add same styles as component above -->
     <div class="flex p-5 border-round shadow-8">
       <p-avatar
         image="https://source.unsplash.com/random/200x200"
