add project line component

--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -36,7 +36,7 @@
               {{ file.name }} - {{ file.size }} bytes
             </li>
           </ul>
-          <ng-template #placeholder> Drag and drop your CV here </ng-template>
+          <ng-template #placeholder> Drag and drop your CV here</ng-template>
         </ng-template>
       </p-fileUpload>
     </div>
@@ -44,15 +44,10 @@
 
   <div class="flex flex-column gap-3">
     <p-panel header="My Projects" [toggleable]="true">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+      <app-project-line
+        *ngFor="let project of projects$ | async"
+        [project]="project"
+      ></app-project-line>
     </p-panel>
 
     <p-panel header="My Applications" [toggleable]="true">
