add project line view

--- a/src/app/features/projects/components/projects-filter/projects-filter.component.html
+++ b/src/app/features/projects/components/projects-filter/projects-filter.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 mt-5 bg-primary-reverse border-round">
+<div class="p-2 bg-primary-reverse border-round">
   <div class="flex gap-2" [formGroup]="searchForm">
     <app-project-category-dropdown formControlName="category" />
 
