--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,9 @@ $xl: 1440px; // Extra large screens (monitors)
   display: flex;
   flex-direction: column;
 
+  padding-left: 5rem;
+  padding-right: 5rem;
+
   @media (min-width: $xl) {
     padding-left: 10rem;
     padding-right: 10rem;
