--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,13 +1,28 @@
-<div class="flex w-full justify-content-center">
+<div class="flex mt-5 w-full align-items-center justify-content-evenly">
   <app-projects-filter />
+
+  <p-toggleButton
+    [(ngModel)]="isCardView"
+    onIcon="pi pi-th-large"
+    offIcon="pi pi-bars"
+  ></p-toggleButton>
 </div>
 
 <ng-container *ngIf="projects && projects.length > 0">
   <div class="flex gap-5 flex-wrap justify-content-center py-5">
-    <app-project-card
-      *ngFor="let project of projects"
-      [project]="project"
-    ></app-project-card>
+    <ng-container *ngIf="isCardView; else lineView">
+      <app-project-card
+        *ngFor="let project of projects"
+        [project]="project"
+      ></app-project-card>
+    </ng-container>
+
+    <ng-template #lineView>
+      <app-project-line
+        *ngFor="let project of projects"
+        [project]="project"
+      ></app-project-line>
+    </ng-template>
   </div>
 
   <div class="card flex justify-content-end">
