add some positions filters

--- a/src/app/features/positions/components/position-filter/position-filter.component.html
+++ b/src/app/features/positions/components/position-filter/position-filter.component.html
@@ -1,3 +1,16 @@
 <div>
   <app-project-category-dropdown />
+
+  <span class="p-input-icon-left">
+    <i class="pi pi-search"></i>
+    <input placeholder="Search by term" type="text" pInputText />
+  </span>
+
+  <p-dropdown
+    [options]="specialities"
+    [(ngModel)]="selectedSpeciality"
+    placeholder="Speciality"
+    [editable]="true"
+    optionLabel="name"
+  ></p-dropdown>
 </div>
