update to latest angular

--- a/src/app/features/user/pages/auth/auth.component.html
+++ b/src/app/features/user/pages/auth/auth.component.html
@@ -36,7 +36,7 @@
         />
         <div class="text-xs" id="password-help">
           Password: ≥ 8 chars, 1 uppercase, 1 lowercase, 1 digit, 1 special
-          character (e.g., @, #, $).
+          character (e.g., #, $).
         </div>
       </div>
 
