--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -1,66 +1,70 @@
-<div class="flex gap-3 pt-5" *ngIf="currentUser$ | async as user">
-  <div class="flex flex-column gap-3">
-    <div class="flex p-5 surface-card border-1 border-round surface-border">
-      <p-avatar
-        image="https://source.unsplash.com/random/200x200"
-        styleClass="mr-2"
-        size="xlarge"
-        shape="circle"
-      ></p-avatar>
+@if (user) {
+  <div class="flex gap-3 pt-5">
+    <div class="flex flex-column gap-3">
+      <div class="flex p-5 surface-card border-1 border-round surface-border">
+        <p-avatar
+          image="https://source.unsplash.com/random/200x200"
+          styleClass="mr-2"
+          size="xlarge"
+          shape="circle"
+        ></p-avatar>
 
-      <div class="ml-2">
-        <div class="font-semibold font-italic">
-          <span>{{ user.firstName }} </span>
-          <span>{{ user.lastName }}</span>
+        <div class="ml-2">
+          <div class="font-semibold font-italic">
+            <span>{{ user.firstName }} </span>
+            <span>{{ user.lastName }}</span>
+          </div>
+          <div class="text-sm">
+            {{ user.title }}
+          </div>
         </div>
-        <div class="text-sm">
-          {{ user.title }}
-        </div>
+      </div>
+
+      <div class="flex justify-content-center min-w-max">
+        <p-toast></p-toast>
+        <p-fileUpload
+          name="demo[]"
+          url="https://www.primefaces.org/cdn/api/upload.php"
+          (onUpload)="onUpload($event)"
+          [multiple]="false"
+          accept=".pdf"
+          [maxFileSize]="1000000"
+        >
+          <ng-template pTemplate="content">
+            @if (uploadedFiles.length) {
+              <ul>
+                @for (file of uploadedFiles; track $index) {
+                  <li>{{ file.name }} - {{ file.size }} bytes</li>
+                }
+              </ul>
+            } @else {
+              Drag and drop your CV here
+            }
+          </ng-template>
+        </p-fileUpload>
       </div>
     </div>
 
-    <div class="flex justify-content-center min-w-max">
-      <p-toast></p-toast>
-      <p-fileUpload
-        name="demo[]"
-        url="https://www.primefaces.org/cdn/api/upload.php"
-        (onUpload)="onUpload($event)"
-        [multiple]="false"
-        accept=".pdf"
-        [maxFileSize]="1000000"
-      >
-        <ng-template pTemplate="content">
-          <ul *ngIf="uploadedFiles.length; else placeholder">
-            <li *ngFor="let file of uploadedFiles">
-              {{ file.name }} - {{ file.size }} bytes
-            </li>
-          </ul>
-          <ng-template #placeholder> Drag and drop your CV here</ng-template>
-        </ng-template>
-      </p-fileUpload>
+    <div class="flex flex-column gap-3">
+      <p-panel header="My Projects" [toggleable]="true">
+        <div class="flex flex-column gap-3">
+          @for (project of projects$ | async; track $index) {
+            <app-project-line [project]="project"></app-project-line>
+          }
+        </div>
+      </p-panel>
+
+      <p-panel header="My Applications" [toggleable]="true">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </p-panel>
     </div>
   </div>
-
-  <div class="flex flex-column gap-3">
-    <p-panel header="My Projects" [toggleable]="true">
-      <div class="flex flex-column gap-3">
-        <app-project-line
-          *ngFor="let project of projects$ | async"
-          [project]="project"
-        ></app-project-line>
-      </div>
-    </p-panel>
-
-    <p-panel header="My Applications" [toggleable]="true">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
-    </p-panel>
-  </div>
-</div>
+}
