fix: add toast module to highlight

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="page-container">
   <app-navbar></app-navbar>
+  <p-toast></p-toast>
   <div class="content-wrap">
     <router-outlet></router-outlet>
   </div>
